Added form validation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="page__title"> Generate a random color of the block</div>
     <form class="page__input">
         <div class="form__group">
-            <input type="text" class="page__control" placeholder="Enter a number greater than 0">
+            <input type="number" class="page__control" placeholder="Enter a number greater than 0" required>
         </div>
         <div class="page__block-action">
             <button class="page__btn btn btn-gen">Generate a color</button>
