Added timer and copy button functionality

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <button class="page__btn btn btn-gen">Generate a color</button>
         </div>
     </form>
+        <button class="page__btn btn btn-run">Stop</button>
 
     <div class="page__blocks"></div>
 </div>
