--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="hexa.css">
-    <title>Document</title>
+    <title>Hexadecimal Color Generator</title>
 </head>
 <body>
     <div class="page__container">
